# PdfWinViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CRASH_FIX_LOG.md  GPT5_Cursor_Agent_Runbook.md  README.md  msbuild_build_project_debug_x64.cmd
.cursor/rules/: cursor-gpt.mdc  cxx.mdc  obj-build-rule.mdc
PdfWinViewer/: Main.cpp
assets/: MonkeyPDF.icns
cmake/templates/: launch.json.in  msbuild_build_debug_x64.cmd.in  tasks.json.in
platform/mac/: App.mm  Info.plist
platform/shared/: pdf_utils.cpp  pdf_utils.h
tools/: build_pdfium_complete.py  build_pdfium_complete.sh  build_pdfium_depot.sh  make_icns.sh  merge_json.cmd  merge_json.ps1
